# wifidog-ng

./: .travis.yml  BUILD.md  BUILDOPENWRT.md  BUILDOPENWRT_ZH.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_ZH.md  Makefile  README.md  README_ZH.md
authserver/: main.go  weixin.json
authserver/www/weixin/: login.html
files/: wifidog-ng.config  wifidog-ng.hotplug  wifidog-ng.init  wifidog-ng.lua
files/wifidog-ng/: auth.lua  config.lua  heartbeat.lua  httpd.lua  ubus.lua  util.lua  version.lua
kmod/: Makefile  config.c  config.h  ip_manage.c  ip_manage.h  main.c  term_manage.c  term_manage.h  terminal.c  terminal.h  tip.c  tip.h  utils.h
openwrt/: Makefile
openwrt/files/: authserver-offline.html  internet-offline.html  wifidog.config  wifidog.crt  wifidog.init  wifidog.key
scripts/: README.md  disable-wifidog-ng  enable-wifidog-ng  wifidog-ng
src/: CMakeLists.txt  Makefile  auth.c  auth.h  bwmon.c  bwmon.h  check_internet.c  check_internet.h  config.c  config.h  counters.c  counters.h  gateway.c  heartbeat.h  http.c  http.h  httpget.c  httpget.h  ipset.c  ipset.h  main.c  ping.c  ping.h  resolv.c  resolv.h  term.c  term.h  termianl.c  termianl.h  ubus.c  ubus.h  utils.c  utils.h  version.h.in  wifidog-ng.c
src/cmake/Modules/: FindLibuhttp.cmake
